gitignore updated, template file path fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+/terraform/.terraform/*
+/terraform/.terraform.lock.hcl
+/terraform/.terraform.tfstate.lock.info
+/terraform/terraform.tfstate
+/terraform/terraform.tfstate.backup
+
+
 ### macOS template
 # General
 .DS_Store
